0.01: New App!
0.02: Make overriding the HRM event optional
      Emit BTHRM event for external sensor
      Add recorder app plugin
0.03: Prevent readings from internal sensor mixing into BT values
      Mark events with src property
      Show actual source of event in app
0.04: Automatically reconnect BT sensor
      App buzzes if no BTHRM events for more than 3 seconds
0.05: Allow reading additional data if available: HRM battery, position and RR
      Better caching of scanned BT device properties
      New setting for not starting the BTHRM together with HRM
      Save some RAM by not defining functions if disabled in settings
      Always emit BTHRM event
      Cleanup promises code and allow to configure custom additional waiting times to work around bugs
      Disconnect cleanly on exit
0.06: Fix bug if no request waiting time is set
      Fix bug if no connection data was cached
      Fix error during disconnect
0.07: Recorder icon only blue if values actually arive