@@ -29,6 +29,7 @@ Heart Rate Service (`180D`) and characteristic (`2A37`).
 So far it has been tested on:
 
 * CooSpo Bluetooth Heart Rate Monitor
+* Wahoo TICKR X 2
 
 ## Internals
 
@@ -36,7 +37,6 @@ This replaces `Bangle.setHRMPower` with its own implementation.
 
 ## TODO
 
-* Maybe a `bthrm.settings.js` and app (that calls it) to enable it to be turned on and off
 * A widget to show connection state?
 * Specify a specific device by address?
 
