@@ -18,3 +18,5 @@
       Fix bug if no connection data was cached
       Fix error during disconnect
 0.07: Recorder icon only blue if values actually arive
+      Adds some preset modes and a custom one
+      Restructure the settings menu
